[gd_scene load_steps=31 format=3 uid="uid://cswo4n3ie6y7x"]

[ext_resource type="Script" path="res://Assets/Scenes/restaurant.gd" id="1_gjta4"]
[ext_resource type="Texture2D" uid="uid://1uwv1qr6ai1q" path="res://Assets/Restaurant/WoodFloor1.png" id="2_6ls2i"]
[ext_resource type="Texture2D" uid="uid://ck8u0c0rago6y" path="res://Assets/Restaurant/WoodFloor2.png" id="2_b8t3e"]
[ext_resource type="PackedScene" uid="uid://dj6q5ws5kbjgj" path="res://Assets/Scenes/waiter.tscn" id="2_fgvdu"]
[ext_resource type="Texture2D" uid="uid://ba4g5o7n8h2ba" path="res://Assets/UI/notepad.png" id="2_s3gyt"]
[ext_resource type="Texture2D" uid="uid://bnowjroueg6ko" path="res://Assets/Restaurant/WoodFloor3.png" id="3_5l6he"]
[ext_resource type="FontFile" uid="uid://bt5de0luhmt6c" path="res://Assets/Fonts/Caveat-Regular.ttf" id="3_55brr"]
[ext_resource type="FontFile" uid="uid://cj4xh5kkdd2us" path="res://Assets/Fonts/Roboto-Bold.ttf" id="3_mqcok"]
[ext_resource type="Texture2D" uid="uid://bxdvgs8ysbepq" path="res://Assets/Restaurant/white.png" id="3_rkp72"]
[ext_resource type="Texture2D" uid="uid://csv3fyqlmrihs" path="res://Assets/Restaurant/bar.png" id="4_7xopk"]
[ext_resource type="PackedScene" uid="uid://f8qnj2x0y1cs" path="res://Assets/Scenes/table.tscn" id="5_1mjg2"]
[ext_resource type="PackedScene" uid="uid://voiqnn8bhniv" path="res://Assets/Scenes/chair.tscn" id="8_xtd84"]
[ext_resource type="Texture2D" uid="uid://csibl51krhjh2" path="res://Assets/Restaurant/carpet.png" id="11_pklt8"]
[ext_resource type="PackedScene" uid="uid://dn85x2w8551o8" path="res://Assets/Scenes/plate.tscn" id="11_t3kre"]
[ext_resource type="PackedScene" uid="uid://cu2vrlxipumk5" path="res://Assets/Scenes/trash_can.tscn" id="12_1dcmu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inwdd"]
bg_color = Color(0, 0.45098, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Theme" id="Theme_0msn8"]
Button/styles/normal = SubResource("StyleBoxFlat_inwdd")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxfyo"]
bg_color = Color(0, 0.631373, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeru8"]
bg_color = Color(0.615686, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8248e"]
bg_color = Color(0.768627, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u3v86"]
texture = ExtResource("2_6ls2i")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kfs5j"]
texture = ExtResource("2_b8t3e")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fe3kc"]
texture = ExtResource("3_5l6he")
0:0/0 = 0
0:0/0/modulate = Color(0.760784, 0.760784, 0.760784, 1)
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wi5hm"]
texture = ExtResource("4_7xopk")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gs67f"]
texture = ExtResource("3_rkp72")
0:0/0 = 0
0:0/0/modulate = Color(1, 1, 1, 0)
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vivhw"]
texture = ExtResource("11_pklt8")
0:0/0 = 0
0:0/0/modulate = Color(0.72549, 0.72549, 0.72549, 1)
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/modulate = Color(0.72549, 0.72549, 0.72549, 1)
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/modulate = Color(0.72549, 0.72549, 0.72549, 1)
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/modulate = Color(0.72549, 0.72549, 0.72549, 1)
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/modulate = Color(0.72549, 0.72549, 0.72549, 1)
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_njkhi"]
physics_layer_0/collision_layer = 1
sources/3 = SubResource("TileSetAtlasSource_wi5hm")
sources/4 = SubResource("TileSetAtlasSource_gs67f")
sources/9 = SubResource("TileSetAtlasSource_vivhw")
sources/2 = SubResource("TileSetAtlasSource_fe3kc")
sources/1 = SubResource("TileSetAtlasSource_kfs5j")
sources/0 = SubResource("TileSetAtlasSource_u3v86")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p1wv3"]
texture = ExtResource("3_rkp72")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m10f0"]
resource_name = "2"
texture = ExtResource("3_rkp72")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 3.5, -8, 3.625)

[sub_resource type="TileSet" id="TileSet_78kxf"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_p1wv3")
sources/1 = SubResource("TileSetAtlasSource_m10f0")

[node name="Restaurant" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_gjta4")

[node name="UI" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="NotepadControl" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchor_left = 0.962
anchor_top = 0.01
anchor_right = 1.0
anchor_bottom = 0.011
offset_left = 1.19983
offset_right = -19.6002
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="Notepad" type="Sprite2D" parent="UI/CanvasLayer/NotepadControl"]
position = Vector2(-87.7501, 135)
scale = Vector2(16.7667, 15)
texture = ExtResource("2_s3gyt")
region_enabled = true
region_rect = Rect2(4, 2, 15, 19)

[node name="Tips" type="Label" parent="UI/CanvasLayer/NotepadControl"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = -184.2
offset_top = 100.481
offset_right = -60.2
offset_bottom = 151.481
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_55brr")
theme_override_font_sizes/font_size = 40
text = "Tips: $0"

[node name="Quota" type="Label" parent="UI/CanvasLayer/NotepadControl"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = -184.2
offset_top = 55.5762
offset_right = -10.2
offset_bottom = 106.576
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_55brr")
theme_override_font_sizes/font_size = 40
text = "Quota: $500"

[node name="ClockLabel" type="Label" parent="UI/CanvasLayer"]
unique_name_in_owner = true
texture_filter = 2
offset_left = 28.0
offset_right = 233.0
offset_bottom = 71.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mqcok")
theme_override_font_sizes/font_size = 60
text = "5:00pm"

[node name="Closing" type="Control" parent="UI/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/CanvasLayer/Closing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 0.788235)

[node name="End of Shift Report" type="RichTextLabel" parent="UI/CanvasLayer/Closing"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.8
offset_left = -404.5
offset_top = -55.0
offset_right = 404.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_mqcok")
theme_override_font_sizes/normal_font_size = 82
bbcode_enabled = true
text = "[center]Your Shift Has Ended!
[u]Results[/u][/center]

"

[node name="QuotaResult" type="Label" parent="UI/CanvasLayer/Closing/End of Shift Report"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.423
anchor_right = 0.511
anchor_bottom = 0.423
offset_left = -99.0
offset_top = -41.5
offset_right = 99.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.705882, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Quota: $000"

[node name="TipsResult" type="Label" parent="UI/CanvasLayer/Closing/End of Shift Report"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.56
anchor_right = 0.511
anchor_bottom = 0.56
offset_left = -99.0
offset_top = -41.5
offset_right = 99.0
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.392157, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Tips: $000"

[node name="FinalResult" type="Label" parent="UI/CanvasLayer/Closing/End of Shift Report"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.696
anchor_right = 0.511
anchor_bottom = 0.696
offset_left = -203.051
offset_top = -18.5
offset_right = 203.05
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mqcok")
theme_override_font_sizes/font_size = 60
text = "You Met Quota!"

[node name="PlayAgain" type="Button" parent="UI/CanvasLayer/Closing/End of Shift Report"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 1.0
anchor_right = 0.3
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -91.0
offset_right = 154.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_0msn8")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mqcok")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_fxfyo")
text = "Play Again"

[node name="Quit" type="Button" parent="UI/CanvasLayer/Closing/End of Shift Report"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 1.0
anchor_right = 0.7
anchor_bottom = 1.0
offset_left = -154.0
offset_top = -91.0
offset_right = 154.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mqcok")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_xeru8")
theme_override_styles/hover = SubResource("StyleBoxFlat_8248e")
text = "Quit"

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_njkhi")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2, 0, 65536, 2, 0, 131072, 2, 0, 196608, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 65551, 2, 0, 131087, 2, 0, 196623, 2, 0, 196610, 2, 0, 131074, 2, 0, 65538, 2, 0, 65537, 2, 0, 131073, 2, 0, 196609, 2, 0, 196611, 2, 0, 131075, 2, 0, 65539, 2, 0, 65540, 2, 0, 131076, 2, 0, 196612, 2, 0, 196613, 2, 0, 131077, 2, 0, 65541, 2, 0, 65542, 2, 0, 131078, 2, 0, 196614, 2, 0, 196615, 2, 0, 131079, 2, 0, 65543, 2, 0, 65544, 2, 0, 131080, 2, 0, 196616, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 65546, 2, 0, 131082, 2, 0, 196618, 2, 0, 196619, 2, 0, 131083, 2, 0, 65547, 2, 0, 65548, 2, 0, 131084, 2, 0, 196620, 2, 0, 196621, 2, 0, 131085, 2, 0, 65549, 2, 0, 65550, 2, 0, 131086, 2, 0, 196622, 2, 0, 16, 3, 0, 65552, 2, 0, 131088, 2, 0, 196624, 2, 0, 17, 3, 0, 65553, 2, 0, 131089, 2, 0, 196625, 2, 0, 18, 2, 0, 65554, 2, 0, 131090, 2, 0, 196626, 2, 0, 19, 2, 0, 65555, 2, 0, 131091, 2, 0, 196627, 2, 0, 262144, 2, 0, 327680, 2, 0, 393216, 2, 0, 458752, 2, 0, 524288, 2, 0, 589824, 2, 0, 655360, 2, 0, 262145, 2, 0, 327681, 2, 0, 393217, 2, 0, 458753, 2, 0, 524289, 2, 0, 589825, 2, 0, 655361, 2, 0, 262146, 2, 0, 327682, 2, 0, 393218, 2, 0, 458754, 2, 0, 524290, 2, 0, 589826, 2, 0, 655362, 2, 0, 262147, 2, 0, 327683, 2, 0, 393219, 2, 0, 458755, 2, 0, 524291, 2, 0, 589827, 2, 0, 655363, 2, 0, 262148, 2, 0, 327684, 2, 0, 393220, 2, 0, 458756, 2, 0, 524292, 2, 0, 589828, 2, 0, 655364, 2, 0, 262149, 2, 0, 327685, 2, 0, 393221, 2, 0, 458757, 2, 0, 524293, 2, 0, 589829, 2, 0, 655365, 2, 0, 262150, 2, 0, 327686, 2, 0, 393222, 2, 0, 458758, 2, 0, 524294, 2, 0, 589830, 2, 0, 655366, 2, 0, 262151, 2, 0, 327687, 2, 0, 393223, 2, 0, 458759, 2, 0, 524295, 2, 0, 589831, 2, 0, 655367, 2, 0, 262152, 2, 0, 327688, 2, 0, 393224, 2, 0, 458760, 2, 0, 524296, 2, 0, 589832, 2, 0, 655368, 2, 0, 262153, 2, 0, 327689, 2, 0, 393225, 2, 0, 458761, 2, 0, 524297, 2, 0, 589833, 2, 0, 655369, 2, 0, 262154, 2, 0, 327690, 2, 0, 393226, 2, 0, 458762, 2, 0, 524298, 2, 0, 589834, 2, 0, 655370, 2, 0, 262155, 2, 0, 327691, 2, 0, 393227, 262153, 0, 458763, 131081, 0, 524299, 131081, 0, 589835, 131081, 0, 655371, 131081, 0, 262156, 2, 0, 327692, 2, 0, 393228, 131081, 1342177280, 458764, 65545, 0, 524300, 65545, 0, 589836, 65545, 0, 655372, 65545, 0, 262157, 2, 0, 327693, 2, 0, 393229, 262153, 1342177280, 458765, 196617, 0, 524301, 196617, 0, 589837, 196617, 0, 655373, 196617, 0, 262158, 2, 0, 327694, 2, 0, 393230, 2, 0, 458766, 2, 0, 524302, 2, 0, 589838, 2, 0, 655374, 2, 0, 262159, 2, 0, 327695, 2, 0, 393231, 2, 0, 458767, 2, 0, 524303, 2, 0, 589839, 2, 0, 655375, 2, 0, 262160, 2, 0, 327696, 2, 0, 393232, 2, 0, 458768, 2, 0, 524304, 2, 0, 589840, 2, 0, 655376, 2, 0, 262161, 2, 0, 327697, 2, 0, 393233, 2, 0, 458769, 2, 0, 524305, 2, 0, 589841, 2, 0, 655377, 2, 0, 262162, 2, 0, 327698, 2, 0, 393234, 2, 0, 458770, 2, 0, 524306, 2, 0, 589842, 2, 0, 655378, 2, 0, 262163, 2, 0, 327699, 2, 0, 393235, 2, 0, 458771, 2, 0, 524307, 2, 0, 589843, 2, 0, 655379, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 131081, 0, 720908, 65545, 0, 720909, 196617, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 786432, 2, 0, 851968, 2, 0, 786433, 2, 0, 851969, 2, 0, 786434, 2, 0, 851970, 2, 0, 786435, 2, 0, 851971, 2, 0, 786436, 2, 0, 851972, 2, 0, 786437, 2, 0, 851973, 2, 0, 786438, 2, 0, 851974, 2, 0, 786439, 2, 0, 851975, 2, 0, 786440, 2, 0, 851976, 2, 0, 786441, 2, 0, 851977, 2, 0, 786442, 2, 0, 851978, 2, 0, 786443, 131081, 0, 851979, 131081, 0, 786444, 65545, 0, 851980, 65545, 0, 786445, 196617, 0, 851981, 196617, 0, 786446, 2, 0, 851982, 2, 0, 786447, 2, 0, 851983, 2, 0, 786448, 2, 0, 851984, 2, 0, 786449, 2, 0, 851985, 2, 0, 786450, 2, 0, 851986, 2, 0, 786451, 2, 0, 851987, 2, 0, 786452, 2, 0, 851988, 2, 0, 786453, 2, 0, 851989, 2, 0, 786454, 2, 0, 851990, 2, 0, 786455, 2, 0, 851991, 2, 0, 786456, 2, 0, 851992, 2, 0, 20, 2, 0, 65556, 2, 0, 131092, 2, 0, 196628, 2, 0, 262164, 2, 0, 327700, 2, 0, 393236, 2, 0, 458772, 2, 0, 524308, 2, 0, 589844, 2, 0, 655380, 2, 0, 720916, 2, 0, 21, 2, 0, 65557, 2, 0, 131093, 2, 0, 196629, 2, 0, 262165, 2, 0, 327701, 2, 0, 393237, 2, 0, 458773, 2, 0, 524309, 2, 0, 589845, 2, 0, 655381, 2, 0, 720917, 2, 0, 22, 2, 0, 65558, 2, 0, 131094, 2, 0, 196630, 2, 0, 262166, 2, 0, 327702, 2, 0, 393238, 2, 0, 458774, 2, 0, 524310, 2, 0, 589846, 2, 0, 655382, 2, 0, 720918, 2, 0, 23, 2, 0, 65559, 2, 0, 131095, 2, 0, 196631, 2, 0, 262167, 2, 0, 327703, 2, 0, 393239, 2, 0, 458775, 2, 0, 524311, 2, 0, 589847, 2, 0, 655383, 2, 0, 720919, 2, 0, 24, 2, 0, 65560, 2, 0, 131096, 2, 0, 196632, 2, 0, 262168, 2, 0, 327704, 2, 0, 393240, 2, 0, 458776, 2, 0, 524312, 2, 0, 589848, 2, 0, 655384, 2, 0, 720920, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 131081, 0, 917516, 65545, 0, 917517, 196617, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 25, 2, 0, 65561, 2, 0, 131097, 2, 0, 196633, 2, 0, 262169, 2, 0, 327705, 2, 0, 393241, 2, 0, 458777, 2, 0, 524313, 2, 0, 589849, 2, 0, 655385, 2, 0, 720921, 2, 0, 786457, 2, 0, 851993, 2, 0, 917529, 2, 0)

[node name="Border" type="TileMap" parent="."]
visible = false
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_78kxf")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, 25, 0, 0, 65561, 0, 0, 131097, 0, 0, 196633, 0, 0, 262169, 0, 0, 327705, 0, 0, 393241, 0, 0, 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 655385, 0, 0, 720921, 0, 0, 786457, 0, 0, 851993, 0, 0, 917529, 0, 0, 917528, 0, 0, 917527, 0, 0, 917526, 0, 0, 917525, 0, 0, 917524, 0, 0, 917523, 0, 0, 917522, 0, 0, 917521, 0, 0, 917520, 0, 0, 917519, 0, 0, 917518, 0, 0, 917517, 0, 0, 917516, 0, 0, 917515, 0, 0, 917514, 0, 0, 917513, 0, 0, 917512, 0, 0, 917511, 0, 0, 917510, 0, 0, 917509, 0, 0, 917508, 0, 0, 917507, 0, 0, 917506, 0, 0, 917505, 0, 0, 917504, 0, 0, 983039, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 851967, 0, 0, 917503, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0)

[node name="Tables" type="Node2D" parent="."]
y_sort_enabled = true
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Table2" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(241, 386)

[node name="Table3" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(241, 575)

[node name="Table4" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(241, 770)

[node name="Table6" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1373, 386)

[node name="Table7" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1373, 575)

[node name="Table8" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1373, 770)

[node name="Table10" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1124, 386)

[node name="Table11" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1124, 575)

[node name="Table12" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(1124, 770)

[node name="Table14" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(493, 386)

[node name="Table15" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(493, 577)

[node name="Table16" parent="Tables" instance=ExtResource("5_1mjg2")]
position = Vector2(493, 770)

[node name="Chairs" type="Node2D" parent="Tables"]
y_sort_enabled = true

[node name="Chair0" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(173, 386)

[node name="Chair1" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(311, 386)
scale = Vector2(-1, 1)

[node name="Chair2" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(173, 575)

[node name="Chair3" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(311, 575)
scale = Vector2(-1, 1)

[node name="Chair4" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(173, 770)

[node name="Chair5" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(311, 770)
scale = Vector2(-1, 1)

[node name="Chair6" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(422, 770)

[node name="Chair7" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(560, 770)
scale = Vector2(-1, 1)

[node name="Chair8" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(422, 575)

[node name="Chair9" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(560, 575)
scale = Vector2(-1, 1)

[node name="Chair10" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(422, 386)

[node name="Chair11" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(560, 386)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="Chair12" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1055, 386)

[node name="Chair13" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1193, 386)
scale = Vector2(-1, 1)

[node name="Chair14" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1055, 575)

[node name="Chair15" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1193, 575)
scale = Vector2(-1, 1)

[node name="Chair16" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1055, 770)

[node name="Chair17" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1193, 770)
scale = Vector2(-1, 1)

[node name="Chair18" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1304, 770)

[node name="Chair19" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1442, 770)
scale = Vector2(-1, 1)

[node name="Chair20" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1304, 575)

[node name="Chair21" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1442, 575)
scale = Vector2(-1, 1)

[node name="Chair22" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1304, 386)

[node name="Chair23" parent="Tables/Chairs" instance=ExtResource("8_xtd84")]
position = Vector2(1442, 386)
scale = Vector2(-1, 1)

[node name="Couples" type="Node2D" parent="."]
y_sort_enabled = true
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Bar" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Plate1" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(544, 26)

[node name="Plate2" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(608, 26)

[node name="Plate3" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(672, 26)

[node name="Plate4" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(736, 26)

[node name="Plate5" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(800, 26)

[node name="Plate6" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(864, 26)

[node name="Plate7" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(928, 26)

[node name="Plate8" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(992, 26)

[node name="Plate9" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(1056, 26)

[node name="Plate10" parent="Bar" instance=ExtResource("11_t3kre")]
visible = false
position = Vector2(1120, 26)

[node name="TrashCan" parent="Bar" instance=ExtResource("12_1dcmu")]
position = Vector2(478, 31)

[node name="Waiter" parent="." instance=ExtResource("2_fgvdu")]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(800, 178)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(722, 961)

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="Clock" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 300.0
one_shot = true

[connection signal="pressed" from="UI/CanvasLayer/Closing/End of Shift Report/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/Closing/End of Shift Report/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Clock" to="." method="_on_clock_timeout"]
